[package]
name = "dilithium-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto-dilithium = "0.5.0"  # 最新の利用可能なバージョンに変更
pyo3 = { version = "0.18.0", features = ["extension-module"] }
pqcrypto-traits = "0.3.4" # 他の依存関係に合わせてバージョンを調整

[lib]
name = "dilithium5"
path = "src/lib.rs"

[[bin]]
name = "dilithium_main"
path = "dilithium_main.rs"
