[package]
name = "rsa-sign-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.5.0"
rand = "0.8.3"
sha2 = "0.10.2"
base64 = "0.13.0"

[lib]
name = "rsa_sign_rs"
path = "src/lib.rs"

[[bin]]
name = "main_sign"
path = "src/bin/main_sign.rs"

[dev-dependencies]
# テスト用に特別なライブラリが必要ならここに追加