# D:\city_chain_project\Algorithm\EC\ec_rust_src\src\core\ldpc\src\pipeline\Cargo.toml
[package]
name    = "ldpc-pipeline"
version = "0.1.0"
edition = "2021"
publish = false

# ─── 依存 ──────────────────────────────────────────────
[dependencies]
tokio          = { version = "1.37", features = [
                    "rt-multi-thread", "macros",
                    "net", "io-util", "sync", "time"
                  ] }
tokio-util     = { version = "0.7", features = ["codec"] }
tokio-stream   = "0.1"
bytes          = "1.5"
serde          = { version = "1.0", features = ["derive"] }
bincode        = "1.3"
blake3         = "1.5"
crc32c         = "0.6"
rayon          = "1.10"
dashmap        = "5.5"
once_cell      = "1.19"
futures        = "0.3"
rmp-serde      = "1.3"
rcgen          = "0.9"

# --- optional ---
lz4_flex       = { version = "0.11", optional = true }
quinn          = { version = "0.10", default-features = false,   optional = true, features = ["runtime-tokio", "tls-rustls"] }

# ─── 機能 ───────────────────────────────────────────────
[features]
default      = ["stub-core", "tcp"]
tcp          = []                 # 標準 TCP
quic         = ["quinn"]
compress-lz4 = ["lz4_flex"]
stub-core    = []                 # ★ コアをモックでまかなう

# ─── dev ───────────────────────────────────────────────
[dev-dependencies]
tokio-test = "0.4"
criterion  = { version = "0.5", features = ["async"] }

# ─── targets ───────────────────────────────────────────
[lib]
name = "ldpc_pipeline"
path = "src/lib.rs"

[[bin]]
name = "ldpc-pipeline"
path = "src/main_pipeline.rs"
