[package]
name = "dpos"                      # クレート名
version = "0.1.0"                  # バージョン
edition = "2021"                   # Rustのエディション（通常は2021）

[lib]
name = "dpos"                      # ライブラリ名（通常クレート名と同じ）
path = "src/lib.rs"                # ライブラリのエントリポイント（src/lib.rs）

[dependencies]
chrono = "0.4"                     # 必要な依存関係
actix-web = "4"                    
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }  # JSON処理用（必要なら追加）
serde_json = "1.0"                 # JSONシリアライズ用（必要なら追加）