# \city_chain_project\network\DB\mongodb\rsmongo\cargo.toml
[package]
name = "rsmongodb"
version = "0.1.0"
edition = "2021"

[dependencies]
# 置き換え
mongodb = { version = "2.8.2", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
ring = "0.17"
base64 = "0.22"
once_cell = "1.19"   # ★ Lazy 初期化に使用
chrono = "0.4"       # ← createdAt を入れるなら

[lib]
name = "rsmongodb"
path = "src/lib.rs"

[[bin]]
name = "main_rsmongodb"
path = "src/bin/main_rsmongodb.rs"

[[test]]
name = "test_rsmongodb"
path = "tests/test_rsmongodb.rs"