# D:\city_chain_project\DAGs\libs\algorithm\poh_ack\poh_ack_rust\Cargo.toml
[package]
name         = "poh_ack_rust"
version      = "0.1.0"
edition      = "2021"
authors      = ["Your Name <you@example.com>"]
license      = "Apache-2.0"
description  = "PoH ACK verifier (Rust core + PyO3 bindings)"
repository   = "https://github.com/your_org/poh_ack"
build        = "build.rs"

[features]
# ──────────────────────────────────────────────
core          = []                 # CLI だけ使うとき
python        = ["pyo3/extension-module", "pyo3/abi3-py312", "pyo3/auto-initialize"]  # maturin / pytest 用
python-ext    = ["pyo3/extension-module", "pyo3/abi3-py312"]         # Wheel-build（maturin build）
python-embed  = ["python"]         # cargo test --features python-embed
default       = []                 # 明示しないとどちらも off

[lib]
name       = "poh_ack_rust"
crate-type = ["cdylib", "rlib"]
path       = "src/lib.rs"

[[bin]]
name = "main_ack"
path = "src/main_ack.rs"

[dependencies]
# ────── 共通ライブラリは workspace = true でバージョンを一元化 ──────
bs58                 = "0.4"                            # ルートに無いので直書き
ed25519-dalek        = { version = "2", default-features = false, features = ["pkcs8", "rand_core"] }
tokio                = { workspace = true, features = ["rt","rt-multi-thread","macros","time"] }
once_cell            = "1.19"

# --- errors & CLI etc. ----------------------------------------------------
chrono               = { version = "0.4", features = ["serde"] }  # ルートに無い
serde                = { workspace = true, features = ["derive"] }
serde_json           = "1.0"
thiserror            = { workspace = true }
anyhow               = { workspace = true }
clap          = { version = "4.5", features = ["derive"] }
indoc         = "1"

# --- PyO3 & pyo3-asyncio (for Python ≥3.8 / Python 3.12 対応) ---------------
pyo3                 = { workspace = true }
pyo3-async-runtimes  = { workspace = true, features = ["tokio-runtime"] }

[dev-dependencies]
once_cell       = "1.19"
tempfile        = "3"  
rand            = "0.8"
tokio-test      = "0.4"
criterion       = { version = "0.5", features = ["html_reports","async_tokio"] }
assert_cmd      = "2"
predicates      = "3"
serde_json      = "1"
walkdir         = "2.5"
pyo3                 = { workspace = true, default-features = false, features = ["extension-module","abi3-py312"] }
pyo3-build-config    = "0.25.0"

[build-dependencies]
pyo3-build-config = "0.25"

[[test]]
name = "test_py_bindings"
path = "tests/test_py_bindings.rs"
required-features = ["python-embed"] 

[[bench]]
name    = "bench_verifier"
harness = false
path    = "benches/bench_verifier.rs"