# D:\city_chain_project\DAGs\libs\algorithm\poh_holdmetrics\poh_holdmetrics_rust\Cargo.toml
[package]
name          = "poh_holdmetrics_rust"
version = "0.1.2"
edition       = "2021"
description   = "High-performance PoHold metrics core (Rust) for poh_holdmetrics"
license       = "Apache-2.0"
repository    = "https://github.com/your_org/poh_holdmetrics"
build         = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "poh_holdmetrics_rust"
path = "src/lib.rs"

[[bin]]
name = "main_holdmetrics"
path = "src/main_holdmetrics.rs"

[features]
# Python 拡張（拡張モジュール用のリンク設定のみ。）
python        = ["pyo3/extension-module","pyo3/abi3-py312"]
py-ext    = ["pyo3/extension-module","pyo3/abi3-py312"]
# 埋め込み動作用（必要なら）
py-embed  = ["pyo3/auto-initialize"]

# ── 純 Rust (デフォルト) ───────────────────────────────
default = ["core", "grpc"]
core    = []
grpc    = []
test    = []

[dependencies]
# --- FFI & Async ---
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
tokio           = { version = "1.38", features = ["rt-multi-thread", "macros", "time", "signal"] }

# --- Data / Calc ---
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
chrono          = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rayon           = "1.10"
anyhow          = "1.0"
dashmap         = "5.5"
clap            = { version = "4.5", features = ["derive"] }
indoc           = "1"

# --- gRPC ---
tonic           = { version = "0.12", features = ["transport", "tls"] }
prost           = "0.13"
prost-types     = "0.13"
tokio-stream    = "0.1"
async-stream    = "0.3"
hyper           = { version = "0.14", features = ["full"] }
tonic-health    = "0.12"
tonic-reflection = "0.12"

# --- Observability ---
once_cell       = "1.19"
prometheus      = "0.13"
tracing         = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter", "time"] }

# --- Misc ---
thiserror       = "1.0"
config          = "0.14"

[dev-dependencies]
criterion       = { version = "0.5", features = ["html_reports"] }
assert_cmd      = "2.0"
tempfile        = "3.10"
walkdir         = "2.5"
pyo3            = { version = "0.25.0", default-features = false }
pyo3-build-config = "0.25.0"
rayon           = "1.10"

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }
prost-build  = "0.13"

[[bench]]
name    = "bench_holdmetrics_parallel"
harness = false
path    = "benches/bench_holdmetrics_parallel.rs"

[[bench]]
name    = "bench_holdmetrics_calc"
harness = false
path    = "benches/bench_holdmetrics_calc.rs"

[[test]]
name = "test_py_bindings"
path = "tests/test_py_bindings.rs"
required-features = ["python"]
